Minor finishing touches for the MVP

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<li><a href="#menu" onclick="closeNav()">Menu</a></li>
 						<li><a href="#location" onclick="closeNav()">Location</a></li>
 					</ul>
-					<div class="center hide"><img src="images/menu-icon.png" alt="menu icon" id="menu-icon"></div>
+					<div class="flex center hide"><img src="images/menu-icon.png" alt="menu icon" id="menu-icon"></div>
 				</nav>
 			</header>
 
@@ -111,18 +111,18 @@
 				<br>
 				<span>Call Now</span>
 				<br><br>
-				<span><strong><a href="tel:+1123-456-7890">+1 123 456 7890</a></strong></span>
+				<span><strong><a href="tel:123-456-7890">123-456-7890</a></strong></span>
 			</div>
 			<section class="flex hours flex-col"> <!-- flex-row space-between -->
 				<div class="flex-col line-height">
 					<span>Monday to Tuesday</span>
 					<br>
-					<span>09:00 am - 22:00 pm</span>
+					<span>9:00am - 9:00pm</span>
 				</div>
 				<div class="flex-col line-height">
 					<span>Friday to Saturday</span>
 					<br>
-					<span>11:00 am - 20:00 pm</span>
+					<span>11:00am - 10:00pm</span>
 				</div>
 			</section>
 
