Minor stylistic text & background changes

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<br>
 				<span>Call Now</span>
 				<br><br>
-				<span><strong><a href="tel:123-456-7890">123-456-7890</a></strong></span>
+				<span><strong><a href="tel:123-456-7890">123.456.7890</a></strong></span>
 			</div>
 			<section class="flex hours flex-col"> <!-- flex-row space-between -->
 				<div class="flex-col line-height">
