Minor formatting and text updates

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 			</div>
 			<section class="flex hours flex-col"> <!-- flex-row space-between -->
 				<div class="flex-col line-height">
-					<span>Monday to Tuesday</span>
+					<span>Monday to Thursday</span>
 					<br>
 					<span>9:00am - 9:00pm</span>
 				</div>
@@ -124,6 +124,11 @@
 					<br>
 					<span>11:00am - 10:00pm</span>
 				</div>
+			</section>
+			<section class="line-height">
+				123 Main Street
+				<br>
+				Atlanta, GA 30363
 			</section>
 
 			<ul class="flex-inline">
